--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p>Curriculum Vitae | HBS Website | LinkedIn | Bluesky</p>
+                    <p>Curriculum Vitae | LinkedIn | Bluesky</p> <!-- | HBS Website-->
                     <!--<p><a class="btn btn-dark" href="#" role="button">Learn more &raquo;</a></p> -->
                 </div>
             </div>
@@ -171,7 +171,7 @@
           
         </br>
         </div>
-        <div class="row">
+        <!--<div class="row">
 
           <div class="col-md-4">
             <div class="content-wrapper">
@@ -197,7 +197,7 @@
             </div>
             
           </div>
-        </div>
+        </div>-->
         <div class="row">
         </br>
         </div>
