--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Google Font: Bitter -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/jpeg" href="harvard-icon.jpg">
+    <link rel="icon" type="image/jpeg" href="/assets/harvard-icon.jpg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N931ZJDX5"></script>
@@ -107,7 +107,7 @@
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
-          <img src="harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
+          <img src="/assets/harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
           <a class="navbar-brand" href="#">Omar's site</a>
         </div>
 
@@ -147,7 +147,7 @@
             <div class="row align-items-center">
                 <!-- Image Column (Left on Desktop, Top on Mobile) -->
                 <div class="col-md-3 text-center text-md-start">
-                    <img src="headshot.jpg" class="img-fluid profile-img" alt="Omar Olivarez">
+                    <img src="/assets/headshot.jpg" class="img-fluid profile-img" alt="Omar Olivarez">
                 </div>
 
                 <!-- Text Column (Right on Desktop, Below on Mobile) -->
