--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="content-wrapper">
-            <p>Welcome! I am a PhD candidate in the Technology & Operations Management unit at Harvard Business School. My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.</p>
+            <p>Welcome! I am a PhD candidate in the Technology and Operations Management unit at Harvard Business School. My interests lie at the intersection of automation, labor, and management. I am interested in using econometric and experimental methods to study how firms can introduce automation in the workplace.</p>
             <p>Prior to matriculating at Harvard, I worked in the Tech industry. I spent some time as a software developer at Southwest Airlines and as a product operations manager at Google. I received my undergrad in Management Information Systems from the University of Texas.</p>
           </div>
           
