--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
           <img src="/assets/harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
-          <a class="navbar-brand" href="#">Omar's site</a>
+          <a class="navbar-brand" href="index.html">Omar's site</a>
         </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -124,7 +124,7 @@
               <a class="nav-link" href="#">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Teaching</a>
+              <a class="nav-link" href="teaching.html">Teaching</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Misc</a>
