--- a/teaching.html
+++ b/teaching.html
@@ -149,7 +149,7 @@
         </div>
       </div>
 
-      <div class="container text-center mb-4">
+      <div class="container text-start mb-4">
         <p class="fs-5">I am making progress toward's Harvard University's certificate in teaching excellence and attended Bentley University's workshop on <i>Strategies for Success in the College Classroom</i> in 2023.</p>
     </div>
 
