--- a/teaching.html
+++ b/teaching.html
@@ -109,7 +109,7 @@
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
-          <img src="harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
+          <img src="/assets/harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
           <a class="navbar-brand" href="index.html">Omar's site</a>
         </div>
 
