--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Misc</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <div class="dropdown-menu  dropdown-menu-end" aria-labelledby="dropdown01">
                 <a class="dropdown-item" href="#">Opportunities</a>
                 <a class="dropdown-item" href="#">CV</a>
               </div>
