--- a/teaching.html
+++ b/teaching.html
@@ -150,13 +150,14 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am making progress toward's Harvard University's certificate in teaching excellence and attended Bentley University's workshop on <i>Strategies for Success in the College Classroom</i> in 2023.</p>
+        <p class="fs-5">I am making progress toward's Harvard University's teaching certificate and attended Bentley University's workshop on <i>Strategies for Success in the College Classroom</i> in 2023.</p>
     </div>
 
       <div class="container my-5">
         <!-- First Row of Cards -->
         <div class="row gx-4 gy-4">
             <div class="col-md-4">
+              <a href="index.html" class="text-decoration-none">
                 <div class="card">
                     <div class="card-placeholder"></div> <!-- Placeholder instead of broken image -->
                     <div class="card-body">
@@ -165,6 +166,7 @@
                         <p class="card-text"><small class="text-muted">2024</small></p>
                     </div>
                 </div>
+              </a>
             </div>
             <div class="col-md-4">
                 <div class="card">
