--- a/teaching.html
+++ b/teaching.html
@@ -113,6 +113,10 @@
             text-decoration: none;
             color: inherit; /* Keeps original text color */
         }
+        a {
+            color: inherit !important;
+            text-decoration: none !important;
+        }
     </style>
 
     <title>Omar Olivarez</title>
@@ -192,18 +196,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-placeholder"></div>
-                    <div class="card-body">
-                        <h5 class="card-title">Course 3</h5>
-                        <p class="card-text">Course description</p>
-                        <p class="card-text"><small class="text-muted">2024</small></p>
-                    </div>
-                </div>
-            </div>
         </div>
-
         <!-- Space between rows -->
         <div class="my-4"></div>
 
