--- a/teaching.html
+++ b/teaching.html
@@ -115,7 +115,6 @@
         }
         a {
             color: inherit !important;
-            text-decoration: none !important;
         }
     </style>
 
@@ -177,7 +176,7 @@
             <div class="col-md-4">
               <a href="index.html" class="text-decoration-none">
                 <div class="card">
-                    <div class="card-placeholder"></div> <!-- Placeholder instead of broken image -->
+                    <div class="card-placeholder"></div> 
                     <div class="card-body">
                         <h5 class="card-title">Course 1</h5>
                         <p class="card-text">Course description</p>
