--- a/teaching.html
+++ b/teaching.html
@@ -168,71 +168,75 @@
 
       <div class="container text-start mb-4">
         <p class="fs-5">I am making progress toward's Harvard University's teaching certificate and attended Bentley University's workshop on <i>Strategies for Success in the College Classroom</i> in 2023.</p>
-    </div>
+      </div>
 
       <div class="container my-5">
-        <!-- First Row of Cards -->
-        <div class="row gx-4 gy-4">
-            <div class="col-md-4">
+    
+      <!-- First Row Heading -->
+      <h3 class="mb-3">Instructor</h3>
+      
+      <!-- First Row of Cards -->
+      <div class="row gx-4 gy-4">
+          <div class="col-md-4">
               <a href="index.html" class="text-decoration-none">
-                <div class="card">
-                    <div class="card-placeholder"></div> 
-                    <div class="card-body">
-                        <h5 class="card-title">Course 1</h5>
-                        <p class="card-text">Course description</p>
-                        <p class="card-text"><small class="text-muted">2024</small></p>
-                    </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-placeholder"></div>
-                    <div class="card-body">
-                        <h5 class="card-title">Course 2</h5>
-                        <p class="card-text">Course description</p>
-                        <p class="card-text"><small class="text-muted">2024</small></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Space between rows -->
-        <div class="my-4"></div>
-
-        <!-- Second Row of Cards -->
-        <div class="row gx-4 gy-4">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-placeholder"></div>
+                  <div class="card">
+                      <div class="card-placeholder"></div> 
                       <div class="card-body">
-                          <h5 class="card-title">Course 4</h5>
+                          <h5 class="card-title">The Economics of Information and Technology</h5>
                           <p class="card-text">Course description</p>
-                          <p class="card-text"><small class="text-muted">2023</small></p>
+                          <p class="card-text"><small class="text-muted">2024</small></p>
                       </div>
                   </div>
-              </div>
-              <div class="col-md-4">
-                  <div class="card">
-                      <div class="card-placeholder"></div>
-                        <div class="card-body">
-                            <h5 class="card-title">Course 5</h5>
-                            <p class="card-text">Course description</p>
-                            <p class="card-text"><small class="text-muted">2023</small></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-placeholder"></div>
-                          <div class="card-body">
-                              <h5 class="card-title">Course 6</h5>
-                              <p class="card-text">Course description</p>
-                              <p class="card-text"><small class="text-muted">2023</small></p>
-                          </div>
-                      </div>
+              </a>
+          </div>
+          <div class="col-md-4">
+              <div class="card">
+                  <div class="card-placeholder"></div>
+                  <div class="card-body">
+                      <h5 class="card-title">Course 2</h5>
+                      <p class="card-text">Course description</p>
+                      <p class="card-text"><small class="text-muted">2024</small></p>
                   </div>
               </div>
           </div>
+      </div>
+  
+      <!-- Space between first row and second heading -->
+      <h3 class="mt-4 mb-3">Teaching assistant</h3>
+  
+      <!-- Second Row of Cards -->
+      <div class="row gx-4 gy-4">
+          <div class="col-md-4">
+              <div class="card">
+                  <div class="card-placeholder"></div>
+                  <div class="card-body">
+                      <h5 class="card-title">Strategy and Technology</h5>
+                      <p class="card-text">Course description</p>
+                      <p class="card-text"><small class="text-muted">2023</small></p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card">
+                  <div class="card-placeholder"></div>
+                  <div class="card-body">
+                      <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
+                      <p class="card-text">Course description</p>
+                      <p class="card-text"><small class="text-muted">2023</small></p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card">
+                  <div class="card-placeholder"></div>
+                  <div class="card-body">
+                      <h5 class="card-title">Course 6</h5>
+                      <p class="card-text">Course description</p>
+                      <p class="card-text"><small class="text-muted">2023</small></p>
+                  </div>
+              </div>
+          </div>
+      </div>
 
     </main>
 
