--- a/teaching.html
+++ b/teaching.html
@@ -167,7 +167,7 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am making progress toward's Harvard University's teaching certificate and attended Bentley University's workshop on <i>Strategies for Success in the College Classroom</i> in 2023.</p>
+        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am currently progressing toward Harvard University's teaching certificate and, in 2023, attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p>
       </div>
 
       <div class="container my-5">
@@ -202,7 +202,7 @@
       </div>
   
       <!-- Space between first row and second heading -->
-      <h3 class="mt-4 mb-3">Teaching assistant</h3>
+      <h3 class="mt-5 mb-3">Teaching assistant</h3>
   
       <!-- Second Row of Cards -->
       <div class="row gx-4 gy-4">
@@ -230,7 +230,7 @@
               <div class="card">
                   <div class="card-placeholder"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Course 6</h5>
+                      <h5 class="card-title">Course 5</h5>
                       <p class="card-text">Course description</p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
