--- a/teaching.html
+++ b/teaching.html
@@ -173,7 +173,7 @@
       <div class="container my-5">
     
       <!-- First Row Heading -->
-      <h3 class="mb-3">Instructor</h3>
+      <h3 class="mb-3">Courses as Instructor</h3>
       
       <!-- First Row of Cards -->
       <div class="row gx-4 gy-4">
@@ -202,7 +202,7 @@
       </div>
   
       <!-- Space between first row and second heading -->
-      <h3 class="mt-5 mb-3">Teaching assistant</h3>
+      <h3 class="mt-5 mb-3">Courses as Teaching assistant</h3>
   
       <!-- Second Row of Cards -->
       <div class="row gx-4 gy-4">
