--- a/teaching.html
+++ b/teaching.html
@@ -97,7 +97,7 @@
 
         .card-placeholder {
             height: 180px; /* Adjust height as needed */
-            background-color: #343a40; /* Bootstrap dark color */
+            /* background-color: #343a40; Bootstrap dark color */
         }
 
       /* Add shadow on hover */
@@ -180,7 +180,7 @@
           <div class="col-md-4">
               <a href="index.html" class="text-decoration-none">
                   <div class="card">
-                      <div class="card-placeholder"></div> 
+                      <div class="card-placeholder" style="background-color: #2a5674;"></div> 
                       <div class="card-body">
                           <h5 class="card-title">The Economics of Information and Technology</h5>
                           <p class="card-text">Course description</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder"></div>
+                  <div class="card-placeholder" style="background-color: #3b738f;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 2</h5>
                       <p class="card-text">Course description</p>
@@ -208,7 +208,7 @@
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder"></div>
+                  <div class="card-placeholder" style="background-color: #2a5674;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology</h5>
                       <p class="card-text">Course description</p>
@@ -218,7 +218,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder"></div>
+                  <div class="card-placeholder" style="background-color: #3b738f;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Course description</p>
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder"></div>
+                  <div class="card-placeholder" style="background-color: #4f90a6;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 5</h5>
                       <p class="card-text">Course description</p>
