Adding breaks to teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -211,7 +211,7 @@
                   <div class="card-placeholder" style="background-color: #94d2bd;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology</h5>
-                      <p class="card-text">Course description</p>
+                      <p class="card-text">Course description<br> </p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
               </div>
@@ -230,7 +230,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #ee9b00;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Course 5</h5>
+                      <h5 class="card-title">Course 5<br> </h5>
                       <p class="card-text">Course description</p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
