--- a/teaching.html
+++ b/teaching.html
@@ -208,7 +208,7 @@
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #94d2bd;"></div>
+                  <div class="card-placeholder" style="background-color: #f9c74f;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology</h5>
                       <p class="card-text">Course description<br> </p>
@@ -218,7 +218,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #e9d8a6;"></div>
+                  <div class="card-placeholder" style="background-color: #ffd700;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Course description</p>
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #ee9b00;"></div>
+                  <div class="card-placeholder" style="background-color: #003b5c;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 5<br> </h5>
                       <p class="card-text">Course description</p>
