--- a/teaching.html
+++ b/teaching.html
@@ -180,7 +180,7 @@
           <div class="col-md-4">
               <a href="index.html" class="text-decoration-none">
                   <div class="card">
-                      <div class="card-placeholder" style="background-color: #d4aa3a;"></div> 
+                      <div class="card-placeholder" style="background-color: #ca9703;"></div> 
                       <div class="card-body">
                           <h5 class="card-title">The Economics of Information and Technology</h5>
                           <p class="card-text">Course description</p>
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #01615f;"></div>
+                  <div class="card-placeholder" style="background-color: #d5ad36;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 2</h5>
                       <p class="card-text">Course description</p>
@@ -208,7 +208,7 @@
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #004443;"></div>
+                  <div class="card-placeholder" style="background-color: #4488bf;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology</h5>
                       <p class="card-text">Course description<br> </p>
@@ -218,7 +218,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #01615f;"></div>
+                  <div class="card-placeholder" style="background-color: #265999;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Course description</p>
@@ -228,7 +228,7 @@
           </div>
           <div class="col-md-4">
               <div class="card">
-                  <div class="card-placeholder" style="background-color: #188f8b;"></div>
+                  <div class="card-placeholder" style="background-color: #161f48;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 5<br> </h5>
                       <p class="card-text">Course description</p>
