--- a/teaching.html
+++ b/teaching.html
@@ -210,7 +210,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Strategy and Technology</h5>
+                      <h5 class="card-title">Strategy and Technology <br></h5>
                       <p class="card-text">Course description<br> </p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
@@ -231,7 +231,7 @@
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Course 5<br> </h5>
-                      <p class="card-text">Course description</p>
+                      <p class="card-text">Course description <br></p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
               </div>
