--- a/teaching.html
+++ b/teaching.html
@@ -193,7 +193,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #ce846d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Course 2</h5>
+                      <h5 class="card-title">Course 2 <span style="display: block;">&nbsp;</span></h5>
                       <p class="card-text">Course description</p>
                       <p class="card-text"><small class="text-muted">2024</small></p>
                   </div>
