--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="col-md-9">
                     <h1 class="mb-4">Omar Olivarez</h1>
                     <p>PhD Candidate at Harvard Business School</p>
-                    <p>Curriculum Vitae | LinkedIn | Bluesky</p> <!-- | HBS Website-->
+                    <p>Curriculum Vitae</p> <!-- | HBS Website | Bluesky | LinkedIn -->
                     <!--<p><a class="btn btn-dark" href="#" role="button">Learn more &raquo;</a></p> -->
                 </div>
             </div>
