--- a/teaching.html
+++ b/teaching.html
@@ -183,7 +183,7 @@
                       <div class="card-placeholder" style="background-color: #cd5955;"></div> 
                       <div class="card-body">
                           <h5 class="card-title">The Economics of Information and Technology</h5>
-                          <p class="card-text">Course description</p>
+                          <p class="card-text">Harvard Undergraduate Economics</p>
                           <p class="card-text"><small class="text-muted">2024</small></p>
                       </div>
                   </div>
@@ -211,7 +211,7 @@
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology <span style="display: block;">&nbsp;</span></h5>
-                      <p class="card-text">Course description<br> </p>
+                      <p class="card-text">HBS MBA Elective<br> </p>
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
               </div>
@@ -221,8 +221,8 @@
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
-                      <p class="card-text">Course description</p>
-                      <p class="card-text"><small class="text-muted">2023</small></p>
+                      <p class="card-text">Harvard Graduate Elective</p>
+                      <p class="card-text"><small class="text-muted">2024, 2023</small></p>
                   </div>
               </div>
           </div>
