--- a/teaching.html
+++ b/teaching.html
@@ -178,7 +178,7 @@
       <!-- First Row of Cards -->
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
-              <a href="index.html" class="text-decoration-none">
+              <a href="courses/course1.html" class="text-decoration-none">
                   <div class="card">
                       <div class="card-placeholder" style="background-color: #cd5955;"></div> 
                       <div class="card-body">
@@ -190,14 +190,16 @@
               </a>
           </div>
           <div class="col-md-4">
-              <div class="card">
-                  <div class="card-placeholder" style="background-color: #ce846d;"></div>
-                  <div class="card-body">
-                      <h5 class="card-title">Course 2 <span style="display: block;">&nbsp;</span></h5>
-                      <p class="card-text">Course description</p>
-                      <p class="card-text"><small class="text-muted">2024</small></p>
-                  </div>
-              </div>
+              <a href="index.html.html" class="text-decoration-none">
+                <div class="card">
+                    <div class="card-placeholder" style="background-color: #ce846d;"></div>
+                    <div class="card-body">
+                        <h5 class="card-title">Course 2 <span style="display: block;">&nbsp;</span></h5>
+                        <p class="card-text">Course description</p>
+                        <p class="card-text"><small class="text-muted">2024</small></p>
+                    </div>
+                </div>
+              </a>
           </div>
       </div>
   
