--- a/courses/course1.html
+++ b/courses/course1.html
@@ -116,8 +116,8 @@
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
-          <img src="harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
-          <a class="navbar-brand" href="index.html">Omar's site</a>
+          <img src="../harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
+          <a class="navbar-brand" href="../index.html">Omar's site</a>
         </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
