--- a/teaching.html
+++ b/teaching.html
@@ -190,7 +190,7 @@
               </a>
           </div>
           <div class="col-md-4">
-              <a href="index.html.html" class="text-decoration-none">
+              <a href="index.html" class="text-decoration-none">
                 <div class="card">
                     <div class="card-placeholder" style="background-color: #ce846d;"></div>
                     <div class="card-body">
