--- a/courses/course1.html
+++ b/courses/course1.html
@@ -11,7 +11,7 @@
     <!-- Google Font: Bitter -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/jpeg" href="../assets/harvard-icon.jpg">
+    <link rel="icon" type="image/jpeg" href="assets/harvard-icon.jpg">
 
 
 
