--- a/courses/course1.html
+++ b/courses/course1.html
@@ -11,7 +11,7 @@
     <!-- Google Font: Bitter -->
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/jpeg" href="/assets/harvard-icon.jpg">
+    <link rel="icon" type="image/jpeg" href="../assets/harvard-icon.jpg">
 
 
 
@@ -116,7 +116,7 @@
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
-          <img src="../harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
+          <img src="../assets/harvard-icon.jpg" class="navbar-brand-icon me-2" alt="Icon">
           <a class="navbar-brand" href="../index.html">Omar's site</a>
         </div>
 
