--- a/teaching.html
+++ b/teaching.html
@@ -209,6 +209,7 @@
       <!-- Second Row of Cards -->
       <div class="row gx-4 gy-4">
           <div class="col-md-4">
+            <a href="courses/course3.html" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
@@ -217,6 +218,7 @@
                       <p class="card-text"><small class="text-muted">2023</small></p>
                   </div>
               </div>
+            </a>
           </div>
           <div class="col-md-4">
               <div class="card">
