--- a/courses/course3.html
+++ b/courses/course3.html
@@ -159,7 +159,7 @@
       <div class="container">
         <div class="row">
           <div class="content-wrapper">
-            <p class="fs-5">Course desription</p>
+            <p class="fs-5">This course explores the unique aspects of creating effective strategies for technology-intensive businesses. What are effective strategies for winning in markets with network effects? How can technology be leveraged to build multisided platforms? How can firms create and capture the value from intellectual property assets? What are the unique challenges of governing technology-intensive firms? And how can they build and sustain value in emerging technologies?</p>
           </div>
         </div>
       </div>
