--- a/courses/course1.html
+++ b/courses/course1.html
@@ -168,7 +168,7 @@
         <div class="row">
             
             <div class="col-12 col-md-6">
-                <h3>Course details: </h3>
+                <h3>Course details</h3>
                 <ul>
                   <li><b>Level:</b> Undergraduate</li>
                   <li><b>Class size:</b> 12</li>
@@ -176,7 +176,7 @@
                 </ul>
             </div>
             <div class="col-12 col-md-6">
-                <h3>Course objectives: </h3>
+                <h3>Course objectives</h3>
                 <ul>
                   <li>to practice applying statistical methods to the analysis of data</li>
                   <li>to read and write high-quality research papers in economics</li>
