--- a/courses/course3.html
+++ b/courses/course3.html
@@ -13,6 +13,16 @@
 
     <link rel="icon" type="image/jpeg" href="../assets/harvard-icon.jpg">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1N931ZJDX5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-1N931ZJDX5');
+    </script>
+
 
 
     <style>
