--- a/teaching.html
+++ b/teaching.html
@@ -241,14 +241,16 @@
               </div>
           </div>
           <div class="col-md-4">
+            <a href="courses/course3.html" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Course 5<br> </h5>
-                      <p class="card-text">Course description <span style="display: block;">&nbsp;</span></p>
-                      <p class="card-text"><small class="text-muted">2023</small></p>
+                      <h5 class="card-title">Empirical Methods II<br> </h5>
+                      <p class="card-text">Harvard Masters Econometrics Course<span style="display: block;">&nbsp;</span></p>
+                      <p class="card-text"><small class="text-muted">Spring 1 2025</small></p>
                   </div>
               </div>
+            </a>
           </div>
       </div>
 
