--- a/teaching.html
+++ b/teaching.html
@@ -194,12 +194,12 @@
                       <div class="card-body">
                           <h5 class="card-title">The Economics of Information and Technology</h5>
                           <p class="card-text">Harvard Undergraduate Economics</p>
-                          <p class="card-text"><small class="text-muted">2024</small></p>
+                          <p class="card-text"><small class="text-muted">Fall 2023</small></p>
                       </div>
                   </div>
               </a>
           </div>
-          <div class="col-md-4">
+          <!--<div class="col-md-4">
               <a href="index.html" class="text-decoration-none">
                 <div class="card">
                     <div class="card-placeholder" style="background-color: #ce846d;"></div>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
               </a>
-          </div>
+          </div>-->
       </div>
   
       <!-- Space between first row and second heading -->
@@ -225,7 +225,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology <span style="display: block;">&nbsp;</span></h5>
                       <p class="card-text">HBS MBA Elective<br> </p>
-                      <p class="card-text"><small class="text-muted">2023</small></p>
+                      <p class="card-text"><small class="text-muted">Fall 2023</small></p>
                   </div>
               </div>
             </a>
@@ -236,12 +236,12 @@
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Harvard Graduate Elective</p>
-                      <p class="card-text"><small class="text-muted">2024, 2023</small></p>
+                      <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Fall 2023</small></p>
                   </div>
               </div>
           </div>
           <div class="col-md-4">
-            <a href="courses/course3.html" class="text-decoration-none">
+            <a href="courses/course5.html" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
