--- a/courses/course5.html
+++ b/courses/course5.html
@@ -182,6 +182,7 @@
                 <ul>
                   <li><b>Level:</b> Graduate</li>
                   <li><b>Professor:</b> Dr. Soroush Saghafian</li>
+                  <li><b>Term:</b> Spring I 2025</li>
                   <li><b>Class size:</b> 45</li>
                   <li><b>Instructor rating:</b> 5.0/5.0</li>
                 </ul>
@@ -202,7 +203,7 @@
       <div class="container mb-4">
         <h3>Student reviews</h3>
         <ul>
-            <li>"Omar is the greatest teacher I have had at Harvard. He was very informative and always helped to accommodate each of our needs in order to provide the best learning experience. I will 100% recommend his class to everyone I know that is taking Ec 970 in the future."</li>
+            <li>"Omar was one of the best and most effective CAs I have had since I've been at HKS. I attended his office hours multiple times and he always went above and beyond to make sure I had my questions answered. For example, I was having a lot of problems with my R markdown printing correctly and he helped me go line by line through the code to identify the issues. Another example of this was that I stopped by office hours before the midterm to discuss how continuous interaction terms worked. Omar took the time to walk through a few different examples with me and then even followed up over email giving me a more thorough response to my question. He was an incredible asset over Spring 1 and I would highly recommend him as a CA for additional stats classes."</li>
         </ul>
       </div>
 
