--- a/courses/course3.html
+++ b/courses/course3.html
@@ -181,6 +181,8 @@
                 <h3>Course details: </h3>
                 <ul>
                   <li><b>Level:</b> MBA</li>
+                  <li><b>Professor:</b> Dr. David Yoffie</li>
+                  <li><b>Term:</b> Fall 2023</li>
                   <li><b>Position:</b> Teaching Fellow</li>
                   <li><b>Class size:</b> 50 per section (2)</li>
                 </ul>
