--- a/teaching.html
+++ b/teaching.html
@@ -194,7 +194,10 @@
                       <div class="card-body">
                           <h5 class="card-title">The Economics of Information and Technology</h5>
                           <p class="card-text">Harvard Undergraduate Economics</p>
-                          <p class="card-text"><small class="text-muted">Fall 2023</small></p>
+                          <div class="d-flex justify-content-between">
+                            <p class="card-text"><small class="text-muted">Fall 2023</small></p>
+                            <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                          </div>
                       </div>
                   </div>
               </a>
@@ -225,7 +228,10 @@
                   <div class="card-body">
                       <h5 class="card-title">Strategy and Technology <span style="display: block;">&nbsp;</span></h5>
                       <p class="card-text">HBS MBA Elective<br> </p>
-                      <p class="card-text"><small class="text-muted">Fall 2023</small></p>
+                      <div class="d-flex justify-content-between">
+                        <p class="card-text"><small class="text-muted">Fall 2023</small></p>
+                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                      </div>
                   </div>
               </div>
             </a>
@@ -236,7 +242,10 @@
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Harvard Graduate Elective</p>
-                      <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Fall 2023</small></p>
+                      <<div class="d-flex justify-content-between">
+                        <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Spring 2023</small></p>
+                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                      </div>
                   </div>
               </div>
           </div>
@@ -247,7 +256,10 @@
                   <div class="card-body">
                       <h5 class="card-title">Empirical Methods II<br> </h5>
                       <p class="card-text">Harvard Masters Econometrics Course<span style="display: block;">&nbsp;</span></p>
-                      <p class="card-text"><small class="text-muted">Spring 1 2025</small></p>
+                      <div class="d-flex justify-content-between">
+                        <p class="card-text"><small class="text-muted">Spring I 2025</small></p>
+                        <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
+                      </div>
                   </div>
               </div>
             </a>
