--- a/courses/course5.html
+++ b/courses/course5.html
@@ -184,7 +184,7 @@
                   <li><b>Professor:</b> Dr. Soroush Saghafian</li>
                   <li><b>Term:</b> Spring I 2025</li>
                   <li><b>Class size:</b> 45</li>
-                  <li><b>Instructor rating:</b> 5.0/5.0</li>
+                  <li><b>Course assistant rating:</b> 5.0/5.0</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6">
