--- a/teaching.html
+++ b/teaching.html
@@ -242,7 +242,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Harvard Graduate Elective</p>
-                      <<div class="d-flex justify-content-between">
+                      <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Spring 2023</small></p>
                         <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
                       </div>
