--- a/teaching.html
+++ b/teaching.html
@@ -237,6 +237,7 @@
             </a>
           </div>
           <div class="col-md-4">
+            <a href="courses/course4.html" class="text-decoration-none">
               <div class="card">
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
@@ -247,7 +248,8 @@
                         <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
                       </div>
                   </div>
-              </div>
+              </a>
+            </div>
           </div>
           <div class="col-md-4">
             <a href="courses/course5.html" class="text-decoration-none">
