--- a/courses/course4.html
+++ b/courses/course4.html
@@ -202,8 +202,21 @@
 
       <div class="container mb-4">
         <h3>Student reviews</h3>
+        <h4>2024 Fall</h4>
         <ul>
-            <li>"Omar was one of the best and most effective CAs I have had since I've been at HKS. I attended his office hours multiple times and he always went above and beyond to make sure I had my questions answered. For example, I was having a lot of problems with my R markdown printing correctly and he helped me go line by line through the code to identify the issues. Another example of this was that I stopped by office hours before the midterm to discuss how continuous interaction terms worked. Omar took the time to walk through a few different examples with me and then even followed up over email giving me a more thorough response to my question. He was an incredible asset over Spring 1 and I would highly recommend him as a CA for additional stats classes."</li>
+            <li>"I interacted with Omar several times this semester, mainly at his office hours. He's one of the best CAs I've run into at Kennedy. He can explain complex concepts clearly and simply. He's also generous with his time."</li>
+            <li>"Omar was always super effective in delivering support in many ways. He made content accessible without overprescribing learning. He allowed independent learning while ensuring support. This made a difference. I also want to outline how Omar went above and beyond to be available, which truly made big difference for this course."</li>
+            <li>"Best TA I ever had."</li>
+            <li>"He is extremely helpful and always provided me great support. Not only he understands very much about the topic, but also is very kind when handling doubts and providing guidance."</li>
+            <li>"Friendly, kind, and supportive."</li>
+        </ul>
+        <h4>2023 Spring</h4>
+        <ul>
+            <li>""</li>
+            <li>""</li>
+            <li>""</li>
+            <li>""</li>
+            <li>""</li>
         </ul>
       </div>
 
