--- a/courses/course4.html
+++ b/courses/course4.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Machine Learning and Big Data Analytics</h1>
-            <p class="lead">Fall 2024, Soring 2024, Spring 2023</p>
+            <p class="lead">Fall 2024, Spring 2024, Spring 2023</p>
         </div>
       </div>
 
@@ -184,7 +184,7 @@
                   <li><b>Professor:</b> Dr. Soroush Saghafian</li>
                   <li><b>Terms:</b> Fall 2024; Spring 2024; Spring 2023</li>
                   <li><b>Class size:</b> 45; 50; 100</li>
-                  <li><b>Course assistant rating:</b> 5.0/5.0; 5,0/5.0; N/A</li>
+                  <li><b>Course assistant rating:</b> 5.0/5.0; 5,0/5.0; N/A*</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6">
@@ -212,12 +212,15 @@
         </ul>
         <h4>2023 Spring</h4>
         <ul>
-            <li>""</li>
-            <li>""</li>
-            <li>""</li>
-            <li>""</li>
-            <li>""</li>
+            <li>"I like the fact you go above and beyond in your office hours to help people understand the topic and coding. Have rarely met anyone who puts so much heart, effort and thought into their office hours!"</li>
+            <li>"Omar was always eager to help and always showed depth of his knowledge of the course."</li>
+            <li>"Omar was always very helpful and respectful whenever I asked him questions. I was surprised by his thorough, step-by-step explanations he provided me to help me understand the concept. I appreciate efforts and time he spent to assist us."</li>
+            <li>"He is just perfect!"</li>
         </ul>
+      </div>
+
+      <div class="container mb-4">
+        <p>Student ratings and reviews were not collected in the Soring 2023 semester.</p>
       </div>
 
 
