--- a/courses/course4.html
+++ b/courses/course4.html
@@ -220,7 +220,7 @@
       </div>
 
       <div class="container mb-4">
-        <p>Student ratings and reviews were not collected in the Soring 2023 semester.</p>
+        <p><small class="text-muted">Student ratings and reviews were not collected in the Soring 2023 semester.</small></p>
       </div>
 
 
