--- a/courses/course4.html
+++ b/courses/course4.html
@@ -183,7 +183,7 @@
                   <li><b>Level:</b> Graduate</li>
                   <li><b>Professor:</b> Dr. Soroush Saghafian</li>
                   <li><b>Terms:</b> Fall 2024; Spring 2024; Spring 2023</li>
-                  <li><b>Class size:</b> 45; 50; 100</li>
+                  <li><b>Class size:</b> 49; 100; 120</li>
                   <li><b>Course assistant rating:</b> 5.0/5.0; 5,0/5.0; N/A*</li>
                 </ul>
             </div>
@@ -220,7 +220,7 @@
       </div>
 
       <div class="container mb-4">
-        <p><small class="text-muted">Student ratings and reviews were not collected in the Soring 2023 semester.</small></p>
+        <p><small class="text-muted">Student ratings and reviews were not collected in the Spring 2023 semester.</small></p>
       </div>
 
 
