--- a/teaching.html
+++ b/teaching.html
@@ -110,6 +110,12 @@
             /* background-color: #343a40; Bootstrap dark color */
         }
 
+      @media (max-width: 768px) {
+            .card-placeholder {
+                height: 90px !important; /* Shrinks to 50% of the original 180px */
+            }
+        }
+
       /* Add shadow on hover */
         .card {
             transition: box-shadow 0.3s ease-in-out;
