--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         @media (max-width: 768px) {
             .profile-img {
                 max-width: 53vw; /* Scale to 40% of viewport width on smaller screens */
-                margin-top: 40px; /* Add spacing to prevent overlap */
+                margin-top: 40px !important; /* Add spacing to prevent overlap */
             }
 
             
