--- a/teaching.html
+++ b/teaching.html
@@ -190,7 +190,7 @@
       </div>
 
       <div class="container text-start mb-4">
-        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am currently progressing toward Harvard University's teaching certificate and, in 2023, attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p>
+        <p class="fs-5">I am deeply committed to teaching and continuously strive to enhance my pedagogical skills. I am currently working on Harvard University's teaching certificate and, in 2023, attended Bentley University's <i>Strategies for Success in the College Classroom</i> workshop.</p>
       </div>
 
       <div class="container my-5">
