--- a/courses/course4.html
+++ b/courses/course4.html
@@ -161,7 +161,7 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
-            <h1 class="display-4">Machine Learning & Big Data Analytics</h1>
+            <h1 class="display-4">Machine Learning and Big Data Analytics</h1>
             <p class="lead">Fall 2024, Spring 2024, Spring 2023</p>
         </div>
       </div>
