--- a/teaching.html
+++ b/teaching.html
@@ -121,7 +121,13 @@
             .card-placeholder {
                 height: 70px !important; /* Shrinks to 50% of the original 180px */
             }
+
+            .card {
+                height: 250px !important; /* Adjust to desired height */
+            }
         }
+
+      
 
       /* Add shadow on hover */
         .card {
@@ -254,7 +260,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #709eac;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Machine Learning & Big Data Analytics</h5>
+                      <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Harvard Graduate Elective</p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Spring 2023</small></p>
