--- a/teaching.html
+++ b/teaching.html
@@ -275,8 +275,8 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Empirical Methods II<br> </h5>
-                      <p class="card-text">Harvard Masters Econometrics Course<span style="display: block;">&nbsp;</span></p>
+                      <h5 class="card-title">Empirical Methods II<span style="display: block;">&nbsp;</span></h5>
+                      <p class="card-text">Harvard Masters Econometrics Course</p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted">Spring I 2025</small></p>
                         <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
