--- a/teaching.html
+++ b/teaching.html
@@ -122,9 +122,7 @@
                 height: 70px !important; /* Shrinks to 50% of the original 180px */
             }
 
-            .card {
-                height: 220px !important; /* Adjust to desired height */
-            }
+            
         }
 
       
@@ -263,7 +261,7 @@
                       <h5 class="card-title">Machine Learning and Big Data Analytics</h5>
                       <p class="card-text">Harvard Graduate Elective</p>
                       <div class="d-flex justify-content-between">
-                        <p class="card-text"><small class="text-muted">Fall 2024, Spring 2024, Spring 2023</small></p>
+                        <p class="card-text"><small class="text-muted">F 2024, S 2024, S 2023</small></p>
                         <p class="card-text text-end"><small class="text-muted">>> more details</small></p>
                       </div>
                   </div>
