--- a/teaching.html
+++ b/teaching.html
@@ -23,6 +23,8 @@
       gtag('config', 'G-1N931ZJDX5');
     </script>
 
+    
+
 
 
     <style>
@@ -134,6 +136,10 @@
         .card:hover {
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
         }
+
+      .card-shadow {
+          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+      }
 
         /* Ensure h5 and p inside cards do not turn blue */
         .card a {
@@ -290,6 +296,21 @@
     <!--<footer class="footer">
       Developed by Omar. Last updated on Feb 28, 2024.
     </footer> -->
+
+    <script>
+        // Only run this script on devices that support touch
+        if ('ontouchstart' in window) {
+            document.querySelectorAll('.card').forEach(card => {
+                card.addEventListener('touchstart', () => {
+                    card.classList.add('card-shadow');
+                });
+
+                card.addEventListener('touchend', () => {
+                    card.classList.remove('card-shadow');
+                });
+            });
+        }
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
