--- a/teaching.html
+++ b/teaching.html
@@ -249,7 +249,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #96a189;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Strategy and Technology <span style="display: block;">&nbsp;</span></h5>
+                      <h5 class="card-title">Strategy and Technology </h5> <!--<span style="display: block;">&nbsp;</span>-->
                       <p class="card-text">HBS MBA Elective<br> </p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted">Fall 2023</small></p>
@@ -279,7 +279,7 @@
               <div class="card">
                   <div class="card-placeholder" style="background-color: #6c839d;"></div>
                   <div class="card-body">
-                      <h5 class="card-title">Empirical Methods II<span style="display: block;">&nbsp;</span></h5>
+                      <h5 class="card-title">Empirical Methods II</h5> <!--<span style="display: block;">&nbsp;</span>-->
                       <p class="card-text">Harvard Masters Econometrics Course</p>
                       <div class="d-flex justify-content-between">
                         <p class="card-text"><small class="text-muted">Spring I 2025</small></p>
