--- a/courses/course5.html
+++ b/courses/course5.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Empirical Methods II</h1>
-            <p class="lead">Spring 1 2025</p>
+            <p class="lead">Harvard Kennedy School of Government</p>
         </div>
       </div>
 
