--- a/courses/course4.html
+++ b/courses/course4.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Machine Learning and Big Data Analytics</h1>
-            <p class="lead">Fall 2024, Spring 2024, Spring 2023</p>
+            <p class="lead">Harvard Kennedy School of Government</p>
         </div>
       </div>
 
