--- a/courses/course5.html
+++ b/courses/course5.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Empirical Methods II</h1>
-            <p class="lead">Harvard Kennedy School of Government</p>
+            <p class="lead">Harvard Graduate Econometrics Course</p>
         </div>
       </div>
 
@@ -180,7 +180,7 @@
             <div class="col-12 col-md-6">
                 <h3>Course details</h3>
                 <ul>
-                  <li><b>Level:</b> Graduate</li>
+                  <li><b>Level:</b>Masters</li>
                   <li><b>Professor:</b> Dr. Soroush Saghafian</li>
                   <li><b>Term:</b> Spring I 2025</li>
                   <li><b>Class size:</b> 45</li>
