--- a/courses/course3.html
+++ b/courses/course3.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Strategy and Technology</h1>
-            <p class="lead">Fall 2023</p>
+            <p class="lead">HBS EC Course</p>
         </div>
       </div>
 
@@ -184,7 +184,7 @@
                   <li><b>Professor:</b> Dr. David Yoffie</li>
                   <li><b>Term:</b> Fall 2023</li>
                   <li><b>Position:</b> Teaching Fellow</li>
-                  <li><b>Class size:</b> 50 per section (2)</li>
+                  <li><b>Class size:</b> 50 per section (2 sections)</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6">
