--- a/courses/course1.html
+++ b/courses/course1.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">The Economics of Information and Technology</h1>
-            <p class="lead">Fall 2023</p>
+            <p class="lead">Harvard Undergraduate Economics Course</p>
         </div>
       </div>
 
