--- a/courses/course5.html
+++ b/courses/course5.html
@@ -162,7 +162,7 @@
       <div class="bg-light py-5 mb-4">
         <div class="container text-center">
             <h1 class="display-4">Empirical Methods II</h1>
-            <p class="lead">Harvard Graduate Masters Course</p>
+            <p class="lead">Harvard Masters Econometrics Course</p>
         </div>
       </div>
 
