--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white">
+    <!-- UNCOMMENT HERE<nav class="navbar navbar-expand-md navbar-light fixed-top bg-white">
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
@@ -135,8 +135,8 @@
             </li>
           </ul>
         </div>
-        </div>
-    </nav>
+        </div> 
+    </nav> UNCOMMENT HERE--> 
     <main role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
