--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </head>
   <body>
 
-    <!-- UNCOMMENT HERE<nav class="navbar navbar-expand-md navbar-light fixed-top bg-white">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white"> <!-- UNCOMMENT HERE-->
       <div class="container-fluid">
         <div class="d-flex align-items-center navbar-brand-wrapper">
 
@@ -136,7 +136,7 @@
           </ul>
         </div>
         </div> 
-    </nav> UNCOMMENT HERE--> 
+    </nav> <!--UNCOMMENT HERE--> 
     <main role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
